--- a/registerPage/css/style.css
+++ b/registerPage/css/style.css
@@ -96,7 +96,7 @@ body, html {
 
 /* popup *************************************/
 .popup .overlay {
-    position: absolute;
+    position: relative;
     top: 0px;
     left: 0px;
     width: 100%;
