--- a/registerPage/css/style.css
+++ b/registerPage/css/style.css
@@ -159,3 +159,20 @@ body, html {
 .staff-link a:hover {
     text-decoration: underline; /* 添加悬停效果 */
 }
+
+.btn-secondary {
+    background: #bdbdbd;
+    color: #000000;
+ }
+ .btn-secondary a{
+    text-decoration: none;
+    color: #000;
+ }
+ .btn-secondary:hover {
+    background: #9e9e9e;
+    opacity: 0.7;
+ }
+
+ .btn-secondary {
+    margin-top: 10px; /* 增加按钮上方的间距 */
+ }
